--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-output: html_document
+output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -27,6 +27,7 @@ You can install the released version of EWMApchart from
 
 ``` r
 library(EWMApchart)
+
 ```
 
 ## Examples
@@ -50,11 +51,13 @@ This is an example which shows how plot the two sided adjusted EWMA-p chart :
 ```{r plotchart}
 library(EWMApchart)
 #We generate the discrete IC data with measurement error.
-IC = ME_data_generate(0.4,50,50,0.95,0.95)
+IC = ME_data_generate(0.4,50,50,0.90,0.90)
 #We generate the discrete IC data with measurement error.
-OC = ME_data_generate(0.5,50,50,0.95,0.95)
+OC = ME_data_generate(0.6,50,50,0.90,0.90)
+#The real EWMA-p chart
+EWMA_p_chart_two(IC$real_data,OC$real_data,0.05,50,1,1)
 #The unadjusted EWMA-p chart
 EWMA_p_chart_two(IC$obs_data,OC$obs_data,0.05,50,1,1)
 #The adjusted EWMA-p chart
-EWMA_p_chart_two(IC$obs_data,OC$obs_data,0.05,50,0.95,0.95)
+EWMA_p_chart_two(IC$obs_data,OC$obs_data,0.05,50,0.90,0.90)
 ```
